tests/invalid/Public_Invalid_9.whiley
type Hidden is (int x) where x >= 5

public method f({Hidden field} x) -> (int r):
    return 0

